<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A9ADAB"
    tools:context=".PaymentActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="424dp"
        android:layout_height="61dp"
        android:background="#F5960B"
        android:theme="@style/PaymentTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:navigationIcon="@drawable/aceitlogo" />

    <TextView
        android:id="@+id/payment_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#F39117"
        android:fontFamily="cursive"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintHorizontal_bias="0.337"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/btn_discover"
        android:layout_width="147dp"
        android:layout_height="140dp"
        android:layout_marginBottom="32dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/discover"
        app:layout_constraintBottom_toTopOf="@+id/btn_visa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/discover" />

    <ImageButton
        android:id="@+id/btn_paypal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/paypal"
        app:layout_constraintBottom_toTopOf="@+id/btn_discover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/paypal" />

    <ImageButton
        android:id="@+id/btn_visa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/visa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/visa" />
</androidx.constraintlayout.widget.ConstraintLayout>