<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:backgroundTint="@color/colorPrimary"
    tools:context=".PayPalActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="411dp"
        android:layout_height="58dp"
        android:theme="@style/PaymentTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:navigationIcon="@drawable/aceitlogo" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtAmount"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:autofillHints="@string/enternow"
            android:background="#FFFFFF"
            android:hint="@string/enternow"
            android:inputType="number" />

        <Button
            android:id="@+id/btnPayNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:text="@string/paynow" />

    </LinearLayout>

    <TextView
        android:id="@+id/payment_TextView"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="197dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="cursive"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintHorizontal_bias="0.213"
        app:layout_constraintStart_toStartOf="@id/toolbar"
        app:layout_constraintTop_toTopOf="@id/toolbar"
        app:layout_constraintVertical_bias="1.0" />


</RelativeLayout>