<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="177dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="11dp"
        android:contentDescription="@string/profile"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView2"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="0dp"
        android:layout_toEndOf="@+id/imageView2"
        android:text="@string/TextView" />

    <TextView
        android:id="@+id/textView_subjects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView_name"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="0dp"
        android:layout_toEndOf="@+id/imageView2"
        android:text="@string/TextView" />

    <TextView
        android:id="@+id/textView_topics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView_subjects"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="0dp"
        android:layout_toEndOf="@+id/imageView2"
        android:text="@string/TextView" />

    <TextView
        android:id="@+id/textView_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView_subjects"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="0dp"
        android:layout_toEndOf="@+id/imageView2"
        android:text="@string/TextView" />

    <TextView
        android:id="@+id/textView_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView_subjects"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="0dp"
        android:layout_toEndOf="@+id/imageView2"
        android:text="@string/TextView" />

    <TextView
        android:id="@+id/textView_zip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView_subjects"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="0dp"
        android:layout_toEndOf="@+id/imageView2"
        android:text="@string/TextView" />

    <Button
        android:id="@+id/button_request"
        android:layout_width="376dp"
        android:layout_height="38dp"
        android:layout_alignTop="@+id/textView_zip"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-156dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="14dp"
        android:layout_toEndOf="@+id/imageView2"
        android:text="@string/request" />


</RelativeLayout>